objects/ssot__PartyRole__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Role Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleTypeId__c</fullName>
        <label>Party Role Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Party__c</fullName>
        <label>Party</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761210759_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyRole_PartyRoleTypeId_map_PartyR_rel</label>
        <referenceTo>ssot__PartyRoleType__dlm</referenceTo>
        <relationshipLabel>PartyRole_PartyRoleTypeId_map_PartyR_rel</relationshipLabel>
        <relationshipName>rel_1697761210759_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>